KB-9862 | fix sonar issue and increased code coverage (#83)